--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
   "name": "furnitech",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
+    "@react-native-community/netinfo": "^8.2.0",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "~10.0.4",
+    "expo-location": "~14.0.1",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-raw-bottom-sheet": "^2.2.0",
+    "react-native-root-siblings": "^4.1.1",
+    "react-native-size-matters": "^0.4.0",
+    "react-native-smartconfig": "^0.2.2",
+    "react-native-smartconfig-quan": "^1.0.7",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
