--- a/package.json
+++ b/package.json
@@ -12,20 +12,25 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/netinfo": "7.1.3",
+    "@react-native-firebase/app": "^14.7.0",
+    "@react-native-firebase/database": "^14.7.0",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
     "expo-location": "~14.0.1",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "firebase": "^9.6.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-root-siblings": "^4.1.1",
+    "react-native-root-toast": "^3.3.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-smartconfig": "^0.2.2",
     "react-native-smartconfig-quan": "^1.0.7",
+    "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1"
   },
