--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/netinfo": "7.1.3",
+    "@react-native-community/slider": "^4.2.1",
     "@react-native-firebase/app": "^14.7.0",
     "@react-native-firebase/database": "^14.7.0",
     "expo": "~44.0.0",
